# aeordb-client

./: .gitignore  Cargo.toml  LICENSE-BSL.md  README.md  metadata.json
.claude/: DETAILS.md  TODO.md  corruption-report.md
aeordb-client/: Cargo.toml  build.rs  tauri.conf.json
aeordb-client-lib/: Cargo.toml
aeordb-client-lib/src/: auth.rs  autostart.rs  config.rs  connections.rs  error.rs  lib.rs  remote.rs  server.rs  state.rs  sync.rs
aeordb-client-lib/src/api/: routes.rs
aeordb-client-lib/src/api/routes/: conflicts.rs  connections.rs  events.rs  files.rs  settings.rs  status.rs  sync.rs  system.rs
aeordb-client-lib/src/models/: status.rs
aeordb-client-lib/src/remote/: mod.rs  upload.rs
aeordb-client-lib/src/sync/: activity.rs  conflicts.rs  content_type.rs  engine.rs  filesystem_bridge.rs  filter.rs  fs_watcher.rs  hierarchy.rs  metadata.rs  pull.rs  push.rs  reconcile.rs  relationships.rs  replication.rs  runner.rs  sse_listener.rs  watcher.rs
aeordb-client-lib/tests/: conflicts_test.rs  connections_api_test.rs  file_browser_api_test.rs  filter_sync_test.rs  pull_sync_test.rs  push_sync_test.rs  reconcile_test.rs  replication_api_test.rs  settings_api_test.rs  state_store_test.rs  status_api_test.rs  sync_activity_test.rs  sync_engine_test.rs  sync_metadata_test.rs  sync_relationships_api_test.rs
aeordb-client/src/: main.rs  static_files.rs
aeordb-client/src/cli/: connections.rs  mod.rs  status.rs  sync.rs
aeordb-client/static/: index.html
aeordb-client/static/components/: aeor-app.js  aeor-conflicts.js  aeor-connections.js  aeor-dashboard.js  aeor-file-browser-client-adapter.js  aeor-file-browser.js  aeor-file-view-shared.js  aeor-nav.js  aeor-remote-folder-picker.js  aeor-settings.js  aeor-sync.js  aeor-toasts.js
aeordb-client/static/components/previews/: aeor-preview-audio.js  aeor-preview-default.js  aeor-preview-image.js  aeor-preview-text.js  aeor-preview-video.js
aeordb-client/static/styles/: main.css
bot-docs/docs/: aeordb-capabilities.yaml  aeordb-sync-engine-analysis.yaml  client-overview.yaml
bot-docs/plan/: aeordb-client-v1.yaml  architecture.yaml  future-features.yaml  sync-engine.yaml  tauri-integration.yaml
bot-docs/test/: meta.yaml
docs/superpowers/specs/: 2026-04-14-tauri-integration-design.md
