[package]
name = "aeordb-client-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
aeordb = { git = "ssh://git@github.com/th317erd/aeordb.git", branch = "main" }
axum = "0.8"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
gethostname = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
uuid = { version = "1", features = ["v4"] }
