[package]
name = "aeordb-client-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
aeordb = { git = "ssh://git@github.com/th317erd/aeordb.git", branch = "main" }
axum = "0.8"
base64 = "0.22"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
futures-util = "0.3"
gethostname = "1"
hex = "0.4"
glob-match = "0.2"
notify = "8"
notify-debouncer-full = "0.5"
open = "5"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
uuid = { version = "1", features = ["v4"] }
